fix header spacing on mobile

--- a/_sass/_site-header.scss
+++ b/_sass/_site-header.scss
@@ -1,7 +1,7 @@
 .site-header {
     background-color: $colour_white;
     color: $colour_black;
-    padding: 1em 0 0;
+    padding: 1em 0;
     text-align: center;
     @include clearfix;
     .container {
